# bot-RSCBot

./: .gitignore  .pre-commit-config.yaml  DevSetup-VSCode.md  README.md  pyproject.toml  requirements.txt
TOOLS/cog_reloader/: CogReload.py  config.py
bcManager/: BCConfig.py  README.md  __init__.py  bcConfig.py  bcManager-old.py  bcManager.py  config.py  info.json
bulkRoleManager/: README.md  __init__.py  bulkRoleManager.py  embeds.py
combineRooms/: README.md  __init__.py  combineRooms.py
dmHelper/: __init__.py  dmHelper.py
dynamicRooms/: README.md  __init__.py  dynamicRooms.py
faCheckIn/: README.md  __init__.py  faCheckIn.py  views.py
match/: README.md  __init__.py  config.py  match.py
match/misc/: example_settings.json
mmrFetcher/: __init__.py  mmrFetcher.py
modLink/: __init__.py  modLink.py
modThread/: README.md  __init__.py  info.json  modThread.py  views.py
notice/: __init__.py  notice.py
prefixManager/: README.md  __init__.py  prefixManager.py  views.py
statsManager/: __init__.py  statsManager.py  statsReference.py
teamManager/: README.md  __init__.py  embeds.py  teamManager.py  views.py
transactions/: README.md  __init__.py  transStringTemplates.py  transactions.py
utilities/: __init__.py
