[project]
name = "rscbot"
version = "0.1.0"
description = "A collection of Red Discord Bot cogs for Rocket Soccar Confederation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11.15"
dependencies = [
    "Red-DiscordBot>=3.5.23",
    "aiohttp>=3.8.5",
    "beautifulsoup4>=4.12.2",
    "fuzzywuzzy>=0.18.0",
    "gspread>=5.9.0",
    "oauth2client>=4.1.3",
    "python-ballchasing",
    "pytz>=2023.3",
    "rapidfuzz>=3.3.0",
    "requests>=2.30.0",
]

[tool.uv.extra-build-dependencies]
python-ballchasing = ["aiohttp", "aiofiles"]

[tool.uv.sources]
python-ballchasing = { git = "https://github.com/xentrick/python-ballchasing.git" }

[tool.codespell]
ignore-words-list = "checkin,oce"

[dependency-groups]
dev = [
    "types-pytz>=2026.1.1.20260408",
    "types-requests>=2.33.0.20260408",
]
